--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,7 +1,9 @@
 // Utils styles
+
 @import "./utils/vars";
 @import "./utils/visually-hidden";
 @import "./utils/placeholders";
+@import "./utils/mixins";
 
 // Components styles
 @import "./components/base";
