--- a/scss/components/_affairs.scss
+++ b/scss/components/_affairs.scss
@@ -1,4 +1,8 @@
 .affairs__section{
+  display: none;
+  @media screen and(min-width: 1200px) {
+    display: block;
+  }
   margin-bottom: 94px;
 }
 
