--- a/scss/components/_container.scss
+++ b/scss/components/_container.scss
@@ -1,6 +1,29 @@
+
+
+
 .container{
-  width: 1200px;
+    // breacktpoints
+  //mobil - 480px
+  // tablet 768px 
+  //Desdtop - 1200px
+
+  //mobil - 480px
+@media screen and (min-width: 480px){
+  max-width: 480px;
   margin-left: auto;
   margin-right: auto;
   padding: 0 15px;
+  outline: 2px solid red;
+}
+
+  // tablet 768px 
+@media screen and (min-width: 768px){
+  max-width: 768px;
+}
+
+  //Desdtop styles
+
+@media screen and (min-width: 1200px){
+  max-width: 1200px;
+}
 }
