--- a/css/main.css
+++ b/css/main.css
@@ -605,6 +605,35 @@ img {
   overflow: hidden;
 }
 
+@media screen and (min-width: 768px) {
+  .advances__list {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+    gap: 30px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .advances__list {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .advances__item {
+    width: 354px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .advances__item {
+    width: 270px;
+  }
+}
+
 .advances__title {
   margin-bottom: 10px;
   color: var(--title-text-color);
@@ -623,6 +652,17 @@ img {
   background-size: contain;
   background-position: center;
   margin-bottom: 30px;
+}
+@media screen and (min-width: 768px) {
+  .advances__title::before {
+    width: 354px;
+  }
+}
+@media screen and (min-width: 768px) {
+  .advances__title::before {
+    background-repeat: no-repeat;
+    width: 270px;
+  }
 }
 
 .icon__satellite::before {
