--- a/scss/components/_advances.scss
+++ b/scss/components/_advances.scss
@@ -59,6 +59,10 @@
   line-height: 16px;
   text-align: center;
   text-transform: uppercase;
+
+  @media screen and (min-width: 768px){
+    text-align: left;
+  }
 }
 
 .advances__title::before {
@@ -67,15 +71,16 @@
   height: 120px;
   // width: 450px;
   background-size: contain;
-  
+  // background-repeat: no-repeat;
   background-position: center;
   margin-bottom: 30px;
 
   @media screen and (min-width: 768px){
     width: 354px;
+    text-align: left;
   }
-  @media screen and (min-width: 768px){
-    background-repeat: no-repeat;
+  @media screen and (min-width: 1200px){
+    
     width: 270px;
   }
 
