--- a/css/main.css
+++ b/css/main.css
@@ -857,14 +857,18 @@ img {
 }
 
 .customers__section {
-  margin: 94px 0;
+  margin-top: 60px;
+  margin-bottom: 60px;
+  padding-top: 0;
+  padding-bottom: 0;
 }
-
-.customers__container {
-  width: 1200px;
-  margin-left: auto;
-  margin-right: auto;
-  padding: 0 15px;
+@media screen and (min-width: 1200px) {
+  .customers__section {
+    margin-top: 94px;
+    margin-bottom: 94px;
+    padding-top: 0;
+    padding-bottom: 0;
+  }
 }
 
 .customers__title {
@@ -882,6 +886,11 @@ img {
   display: -ms-flexbox;
   display: flex;
   gap: 30px;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
 }
 
 .customers__link {
