--- a/scss/components/_footer.scss
+++ b/scss/components/_footer.scss
@@ -3,15 +3,15 @@
   background-color: var(--background-color-futer);
 }
 
-.footer__container{
-  display: flex;
-  align-items: baseline;
+// .footer__container{
+//   display: flex;
+//   align-items: baseline;
 
-  width: 1200px;
-  margin-left: auto;
-  margin-right: auto;
-  padding: 0 15px;
-}
+//   width: 1200px;
+//   margin-left: auto;
+//   margin-right: auto;
+//   padding: 0 15px;
+// }
 
 .address__content{
   margin-top: 20px;
