--- a/css/main.css
+++ b/css/main.css
@@ -931,6 +931,39 @@ img {
 .footer__container {
   text-align: center;
 }
+@media screen and (min-width: 1200px) {
+  .footer__container {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .footer__address {
+    margin-right: 165px;
+    margin-left: 76px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .footer__address {
+    margin-right: 70px;
+    margin-left: 0;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .flex {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .flex {
+    display: flex none;
+  }
+}
 
 .foot---cont {
   display: -webkit-box;
@@ -1042,6 +1075,27 @@ color: var(--accent-color);
 /* ========= Footer Forms======== */
 .footer-form {
   margin-left: auto;
+}
+@media screen and (min-width: 768px) {
+  .footer-form {
+    display: table-caption;
+    margin-left: 165px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .footer-form {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-pack: baseline;
+        -ms-flex-pack: baseline;
+            justify-content: baseline;
+    margin-left: 93px;
+  }
 }
 
 .footer-form-input {
