--- a/scss/components/_contacts.scss
+++ b/scss/components/_contacts.scss
@@ -1,9 +1,14 @@
 .contacts{
-    display: flex;
-    margin-left: auto;
-    & &__item + &__item{
-        margin-left: 50px;
-        @extend .list;
+    @extend .list;
+    display: none;
+    @media screen and(min-width: 768px) {
+        display: block;
+        display: flex;
+        margin-left: auto;
+        & &__item + &__item{
+            margin-left: 50px;
+      }
+   
     }
     &__item{
         display: flex;
