--- a/scss/components/_heder.scss
+++ b/scss/components/_heder.scss
@@ -1,6 +1,7 @@
 .header__container{
+  @extend .container;
   display: flex;
-  align-items: center;
+  // align-items: center;
 
   background-color: var(--background-color);
   border-bottom: 1px solid #ECECEC ;
