--- a/scss/components/_hero.scss
+++ b/scss/components/_hero.scss
@@ -1,7 +1,13 @@
 .hero{
+  @extend .container;
   max-width: 1600px;
   height: 600px;
-  background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4) ), url(../images/css_images/hero/Img.jpg);
+  background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4) ), url(../images/css_images/hero/img_sm-@1x.png);
+  @media (min-device-pixel-ratio: 2),
+  (min-resolution: 192dpi),
+  (min-resolution: 2dppx){
+    background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4) ), url(../images/css_images/hero/img_sm-@2x.png);
+  }
   text-align: center;
   padding: 200px 0;
   background-repeat: no-repeat;
@@ -9,15 +15,27 @@
   margin: 0 auto;
 
   &__title{
-    width: 696px;
-    margin: 0 auto;
-    margin-bottom: 30px;
-  color: #FFFFFF;
-  font-weight: 900;
-  font-size: 44px;
-  line-height: 1.36;
-  letter-spacing: 0.06em;
-  text-transform: uppercase;
+
+    @media screen and (min-width: 480px){
+      width: 360px;
+      margin: 0 auto;
+      margin-bottom: 30px;
+    color: #FFFFFF;
+    font-weight: 900;
+    font-size: 26px;
+    line-height: 1.6;
+    letter-spacing: 0.06em;
+    text-transform: uppercase;
+    }
+  //   width: 696px;
+  //   margin: 0 auto;
+  //   margin-bottom: 30px;
+  // color: #FFFFFF;
+  // font-weight: 900;
+  // font-size: 44px;
+  // line-height: 1.36;
+  // letter-spacing: 0.06em;
+  // text-transform: uppercase;
   }
   &__button{
     min-width: 216px;
