--- a/scss/components/_nav.scss
+++ b/scss/components/_nav.scss
@@ -1,6 +1,14 @@
 .nav{
-  display: flex;
-  align-items: center;
+
+  display: none;
+
+  @media screen and(min-width: 768px) {
+      display: block;
+      display: flex;
+      align-items: center;
+    }
+
+ 
 
   &__list{
     display: flex;
