--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,6 +1,7 @@
 // Utils styles
 
 @import "./utils/vars";
+@import "./utils/normalize";
 @import "./utils/visually-hidden";
 @import "./utils/placeholders";
 @import "./utils/mixins";
@@ -24,3 +25,4 @@
 @import "./components/customers";
 @import "./components/footer";
 @import "./components/portfolio";
+@import "./components/menu";
