--- a/scss/components/_hero.scss
+++ b/scss/components/_hero.scss
@@ -2,12 +2,35 @@
   @extend .container;
   max-width: 1600px;
   height: 600px;
+  
   background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4) ), url(../images/css_images/hero/img_sm-@1x.png);
   @media (min-device-pixel-ratio: 2),
   (min-resolution: 192dpi),
   (min-resolution: 2dppx){
     background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4) ), url(../images/css_images/hero/img_sm-@2x.png);
   }
+
+  // Tablet img
+  @media screen and (min-width: 481px){
+    background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4) ), url(../images/css_images/hero/img_md-@1x.png);
+    @media (min-device-pixel-ratio: 2),
+    (min-resolution: 192dpi),
+    (min-resolution: 2dppx){
+      background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4) ), url(../images/css_images/hero/img_md-@2x.png);
+    }
+  }
+
+  // Decktop img
+  @media screen and (min-width: 769px){
+    background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4) ), url(../images/css_images/hero/img_lg-@1x.png);
+    @media (min-device-pixel-ratio: 2),
+    (min-resolution: 192dpi),
+    (min-resolution: 2dppx){
+      background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4) ), url(../images/css_images/hero/img_lg-@2x.png);
+    }
+  }
+  
+
   text-align: center;
   padding: 200px 0;
   background-repeat: no-repeat;
