--- a/scss/components/_taem.scss
+++ b/scss/components/_taem.scss
@@ -1,37 +1,55 @@
 .team__section{
-    padding: 94px 0;
+    padding: 60px 0;
     background-color:var(--background-color-second);
 }
 
 .team__container{
-    width: 1200px;
-    margin-left: auto;
-    margin-right: auto;
-    padding: 0 15px;
+
+    @media screen and (max-width: 1199px) {
+        max-width: 450px;
+      }
+    // @extend .container;
+    // width: 1200px;
+    // margin-left: auto;
+    // margin-right: auto;
+    // padding: 0 15px;
 }
 
 .team__title{
     margin: 0;
-    margin-bottom: 50px;
+    margin-bottom: 30px;
 color:var(--title-text-color);
 font-weight: 700;
-font-size: 36px;
-line-height: 1.7;
+font-size: 28px;
+line-height: 1.8;
 text-align: center;
 }
+
 .team__list{
-    display: flex;
     @extend .list;
+    --items: 1;
+
+    @media screen and (min-width: 768px) {
+      --items: 2;
+    }
+    @media screen and (min-width: 1200px) {
+      --items: 4;
+    }
+
+    // display: flex;
+    
 }
 
 .team__item{
-margin-right: 30px;
+margin-bottom: 30px;
+// margin-right: 30px;
 background: #FFFFFF;
 box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
 border-radius: 0px 0px 4px 4px;
 }
 .team__item:last-child{
-    margin-right: 0;
+    margin-bottom: 0;
+    // margin-right: 0;
 } 
 .socials__headline{
   margin: 0;
