--- a/css/main.css
+++ b/css/main.css
@@ -266,14 +266,6 @@ summary {
   overflow: hidden;
 }
 
-body {
-  background-color: var(--background-color);
-  color: var(--primary-text-color);
-  font-family: "Roboto", sans-serif;
-  font-size: 14px;
-  letter-spacing: 0.03em;
-}
-
 @media screen and (min-width: 480px) {
   .container, .footer__container, .hero, .header__container {
     max-width: 480px;
@@ -318,6 +310,14 @@ img {
 
 .linka, .adress__link {
   text-decoration: none;
+}
+
+body {
+  background-color: var(--background-color);
+  color: var(--primary-text-color);
+  font-family: "Roboto", sans-serif;
+  font-size: 14px;
+  letter-spacing: 0.03em;
 }
 
 .button {
@@ -1393,7 +1393,7 @@ color: var(--accent-color);
   padding-left: 16px;
   color: rgba(255, 255, 255, 0.6);
   background-color: #2F303A;
-  width: 358px;
+  width: 100%;
   height: 50px;
   border: 1px solid rgba(255, 255, 255, 0.3);
   -webkit-filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
@@ -1403,6 +1403,16 @@ color: var(--accent-color);
   -webkit-transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   margin-bottom: 20px;
+}
+@media screen and (min-width: 768px) {
+  .footer-form-input {
+    width: 450px;
+  }
+}
+@media screen and (min-width: 768px) {
+  .footer-form-input {
+    width: 358px;
+  }
 }
 
 .footer-form-input:focus,
