--- a/scss/components/_footer.scss
+++ b/scss/components/_footer.scss
@@ -157,7 +157,8 @@ background-color: var(--accent-color);
   padding-left: 16px;
   color: rgba(255, 255, 255, 0.6);
   background-color: #2F303A;
-  width: 358px;
+  width: 100%;
+  // width: 358px;
   height: 50px;
   border: 1px solid rgba(255, 255, 255, 0.3);
   filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
@@ -167,6 +168,13 @@ background-color: var(--accent-color);
   transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   
   margin-bottom: 20px;
+
+  @media screen and (min-width: 768px){
+  width: 450px;
+  }
+  @media screen and (min-width: 768px){
+    width: 358px;
+  }
 }
 
 .footer-form-input:focus,
