--- a/scss/components/_taem.scss
+++ b/scss/components/_taem.scss
@@ -5,9 +5,10 @@
 
 .team__container{
 
-    @media screen and (max-width: 1199px) {
-        max-width: 450px;
-      }
+
+    // @media screen and (max-width: 1199px) {
+    //     max-width: 450px;
+    //   }
     // @extend .container;
     // width: 1200px;
     // margin-left: auto;
@@ -26,14 +27,24 @@ text-align: center;
 }
 
 .team__list{
-    @extend .list;
-    --items: 1;
+
+  @extend .list;
+    margin-left: auto;
+    margin-right: auto;
+    width: 450px;
+    
 
     @media screen and (min-width: 768px) {
-      --items: 2;
+      width: 354px;
+    display: flex;
+    flex-wrap: wrap;
+      justify-content: center;
+      align-items: center;
+      gap: 30px;
+      flex-basis: calc((100% - 30px * 2) / 3);
     }
     @media screen and (min-width: 1200px) {
-      --items: 4;
+    width: 270px;
     }
 
     // display: flex;
@@ -51,6 +62,14 @@ border-radius: 0px 0px 4px 4px;
     margin-bottom: 0;
     // margin-right: 0;
 } 
+.social{
+  padding: 16px 0 24px;
+  
+  @media screen and (min-width: 768px){
+    padding: 16px 0 30px;
+  }
+
+}
 .socials__headline{
   margin: 0;
   margin-bottom: 10px;
