--- a/scss/components/_menu.scss
+++ b/scss/components/_menu.scss
@@ -10,15 +10,157 @@ padding: 0;
 
   border: none;
   cursor: pointer;
+
+  @media screen and(min-width: 768px){
+    display: none;
+  }
 }
 
 .menu-container{
-  // position: fixed;
-  // top: 0;
-  // left: 0;
+  position: fixed;
+  top: 0;
+  left: 0;
 
-  // width: 100%;
-  // height: 100%;
+  display: flex;
+  flex-direction: column;
 
-  // background-color: #fff;
+  padding-left: 40px;
+  z-index: 100;
+
+  width: 100%;
+  height: 100%;
+
+  background-color: #fff;
+
+  transform: translateX(100%);
+
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+  &.is-open {
+    transform: translateY(0);
+  }
+}
+
+.menu-toggle{
+  position: absolute;
+  top: 10px;
+  right: 15px;
+
+  width: 30px;
+  height: 30px;
+
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
+  border: 1px solid rgba(0, 0, 0, 0);
+
+  border-radius: 50%;
+  padding: 0;
+  color: var(--accent-color);
+  background-color: #fff;
+  cursor: pointer;
+
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1),
+  border 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+}
+
+.menu-toggle:hover,
+.menu-toggle:focus{
+  fill: currentColor;
+  border: 1px solid rgba(0, 0, 0, 0.1);
+}
+
+
+
+
+
+
+.mobile-menu{
+  @extend .list;
+  margin-bottom: auto;
+  &__item .current{
+  color: var(--accent-color);
+}
+}
+
+.mob-contacts__list{
+  @extend .list;
+}
+.mob-contacts__item{
+  margin-bottom: 32px;
+}
+
+.mobile__link{
+  @extend .linka;
+
+  margin-bottom: 32px;
+font-weight: 500;
+font-size: 40px;
+line-height: 1.8;
+letter-spacing: 0.02em;
+
+color: var(--title-text-color)
+
+}
+.mobile__link:last-child {
+  margin-bottom: 0;
+}
+.tel__link{
+  @extend .linka;
+
+font-weight: 500;
+font-size: 34px;
+line-height: 1.2px;
+
+letter-spacing: 0.02em;
+
+color: var(--accent-color);
+
+}
+
+.mail__link{
+  @extend .linka;
+  font-weight: 500;
+  font-size: 24px;
+  line-height: 1.7;
+  letter-spacing: 0.02em;
+  
+  color: #757575;
+}
+
+
+
+
+.mobile-socials__list{
+  @extend .list;
+  display: flex;
+  margin-bottom: 48px;
+  margin-top: 64px;
+
+
+
+}
+
+.molile-socials__item:not(:last-child) {
+  padding-left: 10px;
+  padding-right: 10px;
+  border-right: 1px solid rgba(33, 33, 33, 0.2);
+// transform: rotate(90deg);
+
+}
+
+.molile-socials__item:last-child{
+  padding-left: 10px;
+}
+.mobile-socials__link{
+  @extend .linka;
+  font-weight: 500;
+  font-size: 18px;
+  line-height: 1.2;
+  
+  letter-spacing: 0.02em;
+  
+  color: #2196F3;
 }
