--- a/scss/components/_taem.scss
+++ b/scss/components/_taem.scss
@@ -50,7 +50,7 @@ text-align: center;
 }
 
 .team__item{
-  width: 450px;
+  // width: 450px;
 
   @media screen and (min-width: 768px){
     width: 354px;
