--- a/scss/components/_contacts.scss
+++ b/scss/components/_contacts.scss
@@ -3,12 +3,15 @@
     display: none;
     @media screen and(min-width: 768px) {
         display: block;
-        display: flex;
+        
         margin-left: auto;
-        & &__item + &__item{
-            margin-left: 50px;
+        
       }
-   
+    @media screen and(min-width: 1200px){
+    display: flex;
+    & &__item + &__item{
+        margin-left: 50px;
+    }
     }
     &__item{
         display: flex;
@@ -21,6 +24,12 @@
         gap: 10px;
         align-items: center;
     justify-content: center;
+    }
+    &__link--margin{
+        margin-right: 15px;
+        @media screen and(min-width: 1200px){
+            margin-right: 0;
+        }
     }
     
     &__icon{
