--- a/scss/components/_advances.scss
+++ b/scss/components/_advances.scss
@@ -5,6 +5,10 @@
     @include section(94px);
   }
 }
+.advances__container{
+  @extend .container;
+}
+
 
 .advances__hidden{
   position: absolute;
