--- a/css/main.css
+++ b/css/main.css
@@ -266,22 +266,25 @@ summary {
   overflow: hidden;
 }
 
+.container, .footer__container, .advances__container, .hero__container, .header__container {
+  width: 100%;
+  margin-left: auto;
+  margin-right: auto;
+  padding: 0 15px;
+}
 @media screen and (min-width: 480px) {
-  .container, .footer__container, .hero, .header__container {
-    max-width: 480px;
-    margin-left: auto;
-    margin-right: auto;
-    padding: 0 15px;
+  .container, .footer__container, .advances__container, .hero__container, .header__container {
+    width: 480px;
   }
 }
 @media screen and (min-width: 768px) {
-  .container, .footer__container, .hero, .header__container {
-    max-width: 768px;
+  .container, .footer__container, .advances__container, .hero__container, .header__container {
+    width: 768px;
   }
 }
 @media screen and (min-width: 1200px) {
-  .container, .footer__container, .hero, .header__container {
-    max-width: 1200px;
+  .container, .footer__container, .advances__container, .hero__container, .header__container {
+    width: 1200px;
   }
 }
 
@@ -473,10 +476,12 @@ body {
 }
 .contacts__link--margin {
   margin-right: 15px;
+  margin-top: 10px;
 }
 @media screen and (min-width: 1200px) {
   .contacts__link--margin {
     margin-right: 0;
+    margin-top: 0;
   }
 }
 .contacts__icon {
@@ -541,7 +546,7 @@ body {
   }
 }
 .hero__title {
-  width: 360px;
+  width: 300px;
   margin: 0 auto;
   margin-bottom: 30px;
   color: #FFFFFF;
@@ -1106,6 +1111,7 @@ body {
 @media screen and (min-width: 768px) {
   .team__item {
     width: 354px;
+    margin-bottom: 0;
   }
 }
 @media screen and (min-width: 1200px) {
@@ -1236,7 +1242,7 @@ body {
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
-  width: 170px;
+  width: 210px;
   height: 92px;
   color: var(--color-icons);
   background-color: var(--background-color);
@@ -1244,6 +1250,11 @@ body {
   border-radius: 4px;
   -webkit-transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1), border 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1), border 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+@media screen and (min-width: 1200px) {
+  .customers__link {
+    width: 170px;
+  }
 }
 
 .customers__link:hover,
@@ -1657,6 +1668,75 @@ color: var(--accent-color);
 
 .products-text {
   border: 1px solid #EEEEEE;
+}
+
+.backdrop {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.2);
+  -webkit-transition: visibility 250ms cubic-bezier(0.4, 0, 0.2, 1), opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: visibility 250ms cubic-bezier(0.4, 0, 0.2, 1), opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.backdrop.is-hidden {
+  opacity: 0;
+  pointer-events: none;
+  visibility: hidden;
+}
+
+.modal {
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  width: 450px;
+  height: 609px;
+  -webkit-transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%);
+  padding: 40px;
+  background-color: var(--background-color);
+  -webkit-box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
+          box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
+  border-radius: 4px;
+}
+@media screen and (min-width: 1200px) {
+  .modal {
+    width: 528px;
+    height: 581px;
+  }
+}
+
+.modal-btn {
+  position: absolute;
+  top: 8px;
+  right: 8px;
+  width: 30px;
+  height: 30px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  border: 1px solid rgba(0, 0, 0, 0.1);
+  border-radius: 50%;
+  padding: 0;
+  color: var(--accent-color);
+  background-color: #fff;
+  cursor: pointer;
+  -webkit-transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1), border 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1), border 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.modal-btn:hover,
+.modal-btn:focus {
+  fill: currentColor;
+  border: 1px solid rgba(0, 0, 0, 0.1);
 }
 
 .menu-btn {
