--- a/scss/components/_contacts.scss
+++ b/scss/components/_contacts.scss
@@ -27,8 +27,10 @@
     }
     &__link--margin{
         margin-right: 15px;
+        margin-top: 10px;
         @media screen and(min-width: 1200px){
             margin-right: 0;
+            margin-top: 0;
         }
     }
     
