--- a/scss/components/_container.scss
+++ b/scss/components/_container.scss
@@ -6,24 +6,26 @@
   //mobil - 480px
   // tablet 768px 
   //Desdtop - 1200px
-
-  //mobil - 480px
-@media screen and (min-width: 480px){
-  max-width: 480px;
+  width: 100%;
   margin-left: auto;
   margin-right: auto;
   padding: 0 15px;
+
+  //mobil - 480px
+@media screen and (min-width: 480px){
+  width: 480px;
+  
   
 }
 
   // tablet 768px 
 @media screen and (min-width: 768px){
-  max-width: 768px;
+  width: 768px;
 }
 
   //Desdtop styles
 
 @media screen and (min-width: 1200px){
-  max-width: 1200px;
+  width: 1200px;
 }
 }
