--- a/scss/components/_customers.scss
+++ b/scss/components/_customers.scss
@@ -37,7 +37,7 @@ text-align: center;
   display: flex;
   align-items: center;
   justify-content: center;
-  width: 170px;
+  width: 210px;
   height: 92px;
   color: var(--color-icons);
   background-color: var(--background-color);
@@ -46,7 +46,9 @@ text-align: center;
 
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1), 
   border 250ms cubic-bezier(0.4, 0, 0.2, 1);
-
+  @media screen and (min-width: 1200px){
+    width: 170px;
+  }
 }
 .customers__link:hover,
 .customers__link:focus {
