--- a/scss/components/_hero.scss
+++ b/scss/components/_hero.scss
@@ -1,5 +1,8 @@
 .hero{
-  @extend .container;
+  &__container{
+    @extend .container;
+  }
+  
   background-repeat: no-repeat;
 background-position: center;
 background-size: cover;
@@ -16,11 +19,13 @@ background-size: cover;
 
   // Tablet screen
   @media screen and (min-width: 481px){
-    background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4) ), url(../images/css_images/hero/img_md-@1x.jpg);
+    background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4) ), 
+    url(../images/css_images/hero/img_md-@1x.jpg);
     @media (min-device-pixel-ratio: 2),
     (min-resolution: 192dpi),
     (min-resolution: 2dppx){
-      background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4) ), url(../images/css_images/hero/img_md-@2x.jpg);
+      background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4) ), 
+      url(../images/css_images/hero/img_md-@2x.jpg);
     }
   }
 
@@ -29,11 +34,13 @@ background-size: cover;
     max-width: 1600px;
     height: 600px;
     padding: 200px 0;
-    background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4) ), url(../images/css_images/hero/img_lg-@1x.jpg);
+    background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4) ), 
+    url(../images/css_images/hero/img_lg-@1x.jpg);
     @media (min-device-pixel-ratio: 2),
     (min-resolution: 192dpi),
     (min-resolution: 2dppx){
-      background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4) ), url(../images/css_images/hero/img_lg-@2x.jpg);
+      background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4) ), 
+      url(../images/css_images/hero/img_lg-@2x.jpg);
     }
   }
   
@@ -45,7 +52,7 @@ background-size: cover;
   margin: 0 auto;
 
   &__title{
-      width: 360px;
+      width: 300px;
       margin: 0 auto;
       margin-bottom: 30px;
     color: #FFFFFF;
