--- a/scss/components/_taem.scss
+++ b/scss/components/_taem.scss
@@ -51,14 +51,15 @@ text-align: center;
 
 .team__item{
   // width: 450px;
-
+  margin-bottom: 30px;
   @media screen and (min-width: 768px){
     width: 354px;
+    margin-bottom: 0;
   }
   @media screen and (min-width: 1200px) {
     width: 270px;
     }
-margin-bottom: 30px;
+
 // margin-right: 30px;
 background: #FFFFFF;
 box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
