--- a/scss/main.scss
+++ b/scss/main.scss
@@ -25,4 +25,5 @@
 @import "./components/customers";
 @import "./components/footer";
 @import "./components/portfolio";
+@import "./components/modal";
 @import "./components/menu";
