--- a/scss/components/_hero.scss
+++ b/scss/components/_hero.scss
@@ -2,56 +2,56 @@
   &__container{
     @extend .container;
   }
-  
+  text-align: center;
+  padding: 200px 0;
   background-repeat: no-repeat;
-background-position: center;
-background-size: cover;
+  background-position: center;
+  margin: 0 auto;
+  background-size: cover;
   
     // Mobile screen
+
   background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4) ), 
-  url(../images/css_images/hero/img_sm-@1x.jpg);
+  url(../images/hero/img_sm-@1x.jpg);
   @media (min-device-pixel-ratio: 2),
   (min-resolution: 192dpi), (min-resolution: 2dppx){
     background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4) ), 
-    url(../images/css_images/hero/img_sm-@2x.jpg);
+    url(../images/hero/img_sm-@2x.jpg);
   }
 
 
   // Tablet screen
   @media screen and (min-width: 481px){
     background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4) ), 
-    url(../images/css_images/hero/img_md-@1x.jpg);
+    url(../images/hero/img_md-@1x.jpg);
     @media (min-device-pixel-ratio: 2),
     (min-resolution: 192dpi),
     (min-resolution: 2dppx){
       background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4) ), 
-      url(../images/css_images/hero/img_md-@2x.jpg);
+      url(../images/hero/img_md-@2x.jpg);
     }
   }
 
   // Decktop screen
-  @media screen and (min-width: 769px){
-    max-width: 1600px;
-    height: 600px;
-    padding: 200px 0;
-    background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4) ), 
-    url(../images/css_images/hero/img_lg-@1x.jpg);
-    @media (min-device-pixel-ratio: 2),
-    (min-resolution: 192dpi),
-    (min-resolution: 2dppx){
-      background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4) ), 
-      url(../images/css_images/hero/img_lg-@2x.jpg);
-    }
+    @media screen and (min-width: 769px) {
+
+      max-width: 1600px;
+      height: 600px;
+      padding: 200px 0;
+
+      background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
+        url(../images/hero/img_lg-@1x.jpg);
+    
+      @media (min-device-pixel-ratio: 2), (min-resolution: 192dpi), (min-resolution: 2dppx) {
+        background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
+          url(../images/hero/img_lg-@1x.jpg);
+      }
   }
   
 
-  text-align: center;
-  padding: 200px 0;
-  background-repeat: no-repeat;
-  background-position: center;
-  margin: 0 auto;
-
+ 
   &__title{
+
       width: 300px;
       margin: 0 auto;
       margin-bottom: 30px;
@@ -62,7 +62,11 @@ background-size: cover;
     letter-spacing: 0.06em;
     text-transform: uppercase;
 
-    @media screen and (min-width: 1200px){
+    @media screen and (min-width: 768px) {
+      width: 360px;
+    }
+
+    @media screen and (min-width: 1200px) {
       width: 696px;
       font-size: 44px;
     line-height: 1.36;
