--- a/scss/components/_modal.scss
+++ b/scss/components/_modal.scss
@@ -23,7 +23,7 @@
   left: 50%;
   top: 50%;
 
-  width: 450px;
+  width: 300px;
   height: 609px;
 
   transform: translate(-50%, -50%);
@@ -32,6 +32,9 @@
 background-color: var(--background-color);
 box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
 border-radius: 4px;
+@media screen and (min-width: 480px){
+  width: 450px;
+}
 
 @media screen and (min-width: 1200px){
   width: 528px;
